--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -58,7 +58,7 @@ body {
 .header {
     grid-area: header;
     display: grid;
-    grid-template-areas: "contactos datosDesktop";
+    grid-template-areas: "contactos botonAsist";
     align-items: center;
     justify-content: space-between;
 }
@@ -80,28 +80,28 @@ body {
     color: green;
     font-size: 20px;
 }
-
-.datosDesktop {
-    display: flex;
+.botonAsist {
+    grid-area: botonAsist;
+    width: 100%;
+    justify-content: center;
     gap: 20px;
-}
-
-.datoHW {
     display: flex;
-    gap: 10px;
-
 }
 
-.temperaturaCPU {
-    color: rgb(0, 123, 0);
-    font-size: 20px;
+.buttonAsist {
+    border-radius: 20px;
+    border: 1px solid skyblue;
+    background-color: rgb(3, 101, 140);
+    color: white;
+    padding: 10px;
+    box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
+    text-align: center;
+    display: grid;
+    grid-template-areas: "iconLogin textLogin";
+    grid-template-columns: auto;
+    width: 100%;
+    cursor: pointer;
 }
-
-.temperaturaRAM {
-    color: rgb(165, 17, 17);
-    font-size: 20px;
-}
-
 .footer {
     grid-area: footer;
 }
@@ -221,7 +221,7 @@ body {
     grid-template-areas:
         "asistVirtual"
         "botonAsist"
-        "monitoreo"
+        "datosDesktop"
         "recomendaciones"
         "botonesSoporte";
     justify-items: center;
@@ -238,81 +238,32 @@ body {
     background: var(--fondoDiv);
 }
 
-.botonAsist {
-    grid-area: botonAsist;
-    width: 100%;
-    justify-content: center;
-    gap: 20px;
-    display: flex;
-}
-
-.buttonAsist {
-    border-radius: 20px;
-    border: 1px solid skyblue;
-    background-color: rgb(3, 101, 140);
-    color: white;
-    padding: 10px;
-    box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
-    text-align: center;
-    display: grid;
-    grid-template-areas: "iconLogin textLogin";
-    grid-template-columns: auto;
-    width: 100%;
-    cursor: pointer;
-}
-
 .botonAsist button:hover {
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(29, 46, 46));
     color: rgb(3, 101, 140);
 }
-
-.monitoreo {
-    grid-area: monitoreo;
-    border: 2px solid rgb(42, 76, 89);
-    box-shadow: 5px 10px 10px -8px rgb(1, 1, 1);
-    border-radius: 30px;
-    color: white;
-    width: 60%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    align-content: center;
-    text-align: center;
+.datosDesktop {
+    display: grid;
+    justify-content: center;
+    gap: 20px;
 }
-
-#btnMonitoreo .btnUlt {
-    width: 100%;
-    height: 100%;
-    background: none;
-    color: white;
+.datoHW {
     display: flex;
-    flex-direction: column;
-    gap: 5px;
+    gap: 10px;
     align-items: center;
-    justify-content: center;
+}
+.valorHW{
+
+}
+.temperaturaCPU {
+    color: rgb(0, 123, 0);
+    font-size: 50px;
 }
 
-.graficoMonit {
-    display: flex;
-    height: 80px;
-    justify-content: center;
+.temperaturaRAM {
+    color: rgb(42, 76, 89);
+    font-size: 50px;
 }
-
-.imgGrafico {
-    height: 100%;
-    animation: none;
-    display: inline-block;
-}
-
-@keyframes rotarImg {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 .recomendaciones {
     grid-area: recomendaciones;
     border: 3px solid rgb(42, 76, 89);
@@ -482,21 +433,31 @@ body {
 
 .mensajeIA {
     grid-area: mensajeIA;
+    display: grid;
+    grid-template-areas: "textIA enviarMessage";
     width: 80%;
-}
-
-.textIA {
     border: 1px solid;
     border-radius: 30px;
     height: 60%;
-    width: 100%;
     color: black;
     text-align: center;
     font-size: 20px;
     font-style: oblique;
+    background: white;
     padding: 10px 0px 10px 0px;
+    align-items: center;
 }
 
+.textIA {
+    background: none;
+    border: none;
+    padding: 0px 0px 0px 20px;
+    outline: none;
+    font-size: 20px;
+}
+.enviarMessage{
+    cursor: pointer;
+}
 .vozIA {
     grid-area: vozIA;
     display: flex;
@@ -526,35 +487,69 @@ body {
     gap: 20px;
     grid-template-areas:
         "analisisCompleto"
-        "diagnostico"
-        "optimizar"
-        "mantenimiento"
-        "monitoreoSop"
-        "historial";
+        "monitoreo"
+        "red";
     text-align: center;
 
     .analisisCompleto {
         grid-area: analisisCompleto;
     }
+}
+.monitoreo{
+    grid-area: monitoreo;
+    border: 2px solid rgb(42, 76, 89);
+    box-shadow: 5px 10px 10px -8px rgb(1, 1, 1);
+    border-radius: 30px;
+    color: white;
+    width: 60%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    align-content: center;
+    text-align: center;
+}
+.red {
+    grid-area: red;
+    border: 2px solid rgb(42, 76, 89);
+    box-shadow: 5px 10px 10px -8px rgb(1, 1, 1);
+    border-radius: 30px;
+    color: white;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    align-content: center;
+    text-align: center;
+}
+#btnMonitoreo .btnUlt {
+    width: 100%;
+    height: 100%;
+    background: none;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+}
 
-    .diagnostico {
-        grid-area: diagnostico;
+.graficoMonit {
+    display: flex;
+    height: 80px;
+    justify-content: center;
+}
+
+.imgGrafico {
+    height: 100%;
+    animation: none;
+    display: inline-block;
+}
+
+@keyframes rotarImg {
+    0% {
+        transform: rotate(0deg);
     }
 
-    .optimizar {
-        grid-area: optimizar;
-    }
-
-    .mantenimiento {
-        grid-area: mantenimiento;
-    }
-
-    .historial {
-        grid-area: historial;
-    }
-
-    .monitoreoSop {
-        grid-area: monitoreoSop;
+    100% {
+        transform: rotate(360deg);
     }
 }
 
@@ -599,21 +594,7 @@ body {
         font-size: 25px;
     }
 }
-#btnDiagnosticoDet .iconAnalisis{
-    color: #d62828;
-}
-#btnOptimizarAntivirus .iconAnalisis{
-    color:  #f77f00;
-}
-#btnMantFunction .iconAnalisis{
-    color: #fcbf49;
-}
-#btnMonitoreioAnalisis .iconAnalisis{
-    color: #00a8e8;
-}
-#btnHistFunction .iconAnalisis{
-    color: #007ea7;
-}
+
 .imgBtnAnalisis {
     display: flex;
     flex-direction: row;
@@ -624,21 +605,7 @@ body {
 .imgBtnAnalisisComp {
     height: 100%;
 }
-
-.diagnostico,
-.optimizar,
-.mantenimiento,
-.historial,
-.monitoreoSop {
-    width: 80%;
-}
-
-.analisisCompleto button:hover,
-.diagnostico:hover button,
-.optimizar:hover button,
-.mantenimiento:hover button,
-.historial:hover button,
-.monitoreoSop:hover button {
+.analisisCompleto button:hover {
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(42, 76, 89));
 }
 
@@ -837,7 +804,7 @@ body {
 
     /*segunda columna*/
     .asistente {
-        grid-template-rows: 15% 8% auto auto 10% !important;
+        grid-template-rows: 15% 10% auto auto 10% !important;
         gap: 10px;
         width: 100%;
     }
@@ -873,19 +840,6 @@ body {
         justify-content: center;
     }
 
-    #btnMonitoreo {
-        width: 100%;
-        height: 100%;
-        background: none;
-        color: white;
-        display: flex;
-        gap: 10px;
-        flex-direction: column;
-    }
-    #btnMonitoreo .textDiag{
-        font-size: 20px;
-        padding: 3px;
-    }
     .graficoMonit {
         display: flex;
         height: 80px;
@@ -1008,17 +962,26 @@ body {
     #btnAnalisiCompleto .textButton {
         font-size: 18px;
     }
-
-    .diagnostico,
-    .optimizar,
-    .mantenimiento,
-    .historial,
-    .monitoreoSop {
+    #btnMonitoreo {
         width: 100%;
+        height: 100%;
+        background: none;
+        color: white;
+        display: flex;
+        gap: 10px;
+        flex-direction: column;
+    }
+    #btnMonitoreo .textDiag{
+        font-size: 20px;
+        padding: 3px;
+    }
+    #btnRed .textDiag{
+        font-size: 20px;
+        padding: 3px;
     }
 
-    /*Quinta columna:*/
-    .ultimo {
+     /*Quinta columna:*/
+     .ultimo {
         display: grid;
         grid-template-areas:
             "detdiagnostico"
@@ -1040,8 +1003,8 @@ body {
         flex-direction: column;
         gap: 5px;
         align-items: center;
-        justify-content: center;
         font-size: 18px;
+        justify-content: center;
     }
     .ultimo .btnUlt .textDiag{
         font-size: 20px;
